--- a/styles/style.scss
+++ b/styles/style.scss
@@ -53,8 +53,10 @@ main {
   box-shadow: 0px 14px 28px darken($main, 20%), 0px 10px 10px darken($main, 10%);
 }
 
+
 .currentTemp {
   font-size: 4rem;
+  color: yellow;
 }
 
 .buttons {
