Tweaks to CSS for buttons.

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -54,11 +54,11 @@ main {
 }
 
 
-.currentTemp {
-  font-size: 4rem;
-  color: yellow;
+#tempValue {
+  font-size: 7rem;
 }
 
 .buttons {
+  margin-top: 20px;
   margin-bottom: 20px;
 }
