--- a/styles/style.css
+++ b/styles/style.css
@@ -50,11 +50,12 @@ main {
   box-shadow: 0px 14px 28px #218f9c, 0px 10px 10px #2ab6c6;
 }
 
-.currentTemp {
-  font-size: 4rem;
+#tempValue {
+  font-size: 7rem;
 }
 
 .buttons {
+  margin-top: 20px;
   margin-bottom: 20px;
 }
 
