Added powersaving mode toggle.

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -53,12 +53,17 @@ main {
   box-shadow: 0px 14px 28px darken($main, 20%), 0px 10px 10px darken($main, 10%);
 }
 
+.psmOn {
+  background-color: red;
+  color: white;
+}
 
-#tempValue {
+.currentTemp {
   font-size: 7rem;
+  margin-top: 20px;
+  margin-bottom: 50px;
 }
 
 .buttons {
-  margin-top: 20px;
   margin-bottom: 20px;
 }
