--- a/styles/style.css
+++ b/styles/style.css
@@ -50,12 +50,18 @@ main {
   box-shadow: 0px 14px 28px #218f9c, 0px 10px 10px #2ab6c6;
 }
 
-#tempValue {
+.psmOn {
+  background-color: red;
+  color: white;
+}
+
+.currentTemp {
   font-size: 7rem;
+  margin-top: 20px;
+  margin-bottom: 50px;
 }
 
 .buttons {
-  margin-top: 20px;
   margin-bottom: 20px;
 }
 
