--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,8 @@ body {
   background-color: #4ACAD9;
   font-family: axia, sans-serif;
   font-size: 16px;
+  height: 100vh;
+  display: flex;
 }
 
 h1, h2, h3 {
@@ -22,13 +24,9 @@ button:focus, button:active {
   outline: none;
 }
 
-sup {
-  font-size: 2rem;
-}
-
 main {
   margin: auto;
-  height: 400px;
+  height: 600px;
   width: 400px;
   border-radius: 10px;
   background-color: #84f4e9;
@@ -37,17 +35,35 @@ main {
   flex-direction: column;
 }
 
+footer {
+  margin: 25px auto;
+  width: 400px;
+  border-radius: 10px;
+  background-color: #84f4e9;
+  box-shadow: 0px 14px 28px #14e5d0, 0px 10px 10px #3eeedd;
+  display: flex;
+  flex-direction: column;
+}
+
+#select-city {
+  margin-bottom: 25px;
+}
+
 #interface {
   background-color: #6DF2E5;
   border-radius: 10px;
   width: 500px;
-  height: 500px;
+  height: 700px;
   margin: auto;
   padding: 50px;
   text-align: center;
   display: flex;
   flex-direction: column;
   box-shadow: 0px 14px 28px #218f9c, 0px 10px 10px #2ab6c6;
+}
+
+.currentTemp sup {
+  font-size: 2rem;
 }
 
 .psmOn {
