--- a/styles/style.scss
+++ b/styles/style.scss
@@ -5,6 +5,8 @@ body {
   background-color: $main;
   font-family: axia, sans-serif;
   font-size: 16px;
+  height: 100vh;
+  display: flex;
 }
 
 h1, h2, h3 {
@@ -23,13 +25,18 @@ button:focus, button:active{
   outline: none;
 }
 
-sup{
-  font-size: 2rem;
-}
-
 main {
   margin: auto;
-  height: 400px;
+  height: 600px;
+  width: 400px;
+  border-radius: 10px;
+  background-color: lighten($light, 5%);
+  box-shadow: 0px 14px 28px darken($light, 20%), 0px 10px 10px darken($light, 10%);
+  display: flex;
+  flex-direction: column;
+}
+footer {
+  margin: 25px auto;
   width: 400px;
   border-radius: 10px;
   background-color: lighten($light, 5%);
@@ -38,13 +45,16 @@ main {
   flex-direction: column;
 }
 
+#select-city{
+  margin-bottom: 25px;
+}
 
 
 #interface {
   background-color: $light;
   border-radius: 10px;
   width: 500px;
-  height: 500px;
+  height: 700px;
   margin: auto;
   padding: 50px;
   text-align: center;
@@ -53,6 +63,9 @@ main {
   box-shadow: 0px 14px 28px darken($main, 20%), 0px 10px 10px darken($main, 10%);
 }
 
+.currentTemp sup{
+  font-size: 2rem;
+}
 
 .psmOn {
   background-color: red;
