--- a/styles/style.css
+++ b/styles/style.css
@@ -29,7 +29,7 @@ main {
   height: 600px;
   width: 400px;
   border-radius: 10px;
-  background-color: #84f4e9;
+  background-color: #92f5ec;
   box-shadow: 0px 14px 28px #14e5d0, 0px 10px 10px #3eeedd;
   display: flex;
   flex-direction: column;
@@ -39,7 +39,7 @@ footer {
   margin: 25px auto;
   width: 400px;
   border-radius: 10px;
-  background-color: #84f4e9;
+  background-color: #92f5ec;
   box-shadow: 0px 14px 28px #14e5d0, 0px 10px 10px #3eeedd;
   display: flex;
   flex-direction: column;
@@ -67,8 +67,7 @@ footer {
 }
 
 .psmOn {
-  background-color: red;
-  color: white;
+  color: #FF564B;
 }
 
 .low-usage {
