--- a/styles/style.scss
+++ b/styles/style.scss
@@ -30,7 +30,7 @@ main {
   height: 600px;
   width: 400px;
   border-radius: 10px;
-  background-color: lighten($light, 5%);
+  background-color: lighten($light, 8%);
   box-shadow: 0px 14px 28px darken($light, 20%), 0px 10px 10px darken($light, 10%);
   display: flex;
   flex-direction: column;
@@ -39,7 +39,7 @@ footer {
   margin: 25px auto;
   width: 400px;
   border-radius: 10px;
-  background-color: lighten($light, 5%);
+  background-color: lighten($light, 8%);
   box-shadow: 0px 14px 28px darken($light, 20%), 0px 10px 10px darken($light, 10%);
   display: flex;
   flex-direction: column;
@@ -68,8 +68,8 @@ footer {
 }
 
 .psmOn {
-  background-color: red;
-  color: white;
+  // background-color: #FF958B;
+  color: #FF564B;
 }
 
 .low-usage {
