--- a/styles/style.css
+++ b/styles/style.css
@@ -12,6 +12,8 @@ h1, h2, h3 {
 
 h1 {
   font-size: 4rem;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 button {
@@ -34,6 +36,9 @@ main {
   display: flex;
   flex-direction: column;
 }
+main sup {
+  margin-left: -20px;
+}
 
 footer {
   margin: 25px auto;
@@ -52,10 +57,9 @@ footer {
 #interface {
   background-color: #6DF2E5;
   border-radius: 10px;
-  width: 500px;
-  height: 700px;
+  width: 600px;
+  height: 600px;
   margin: auto;
-  padding: 50px;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -71,23 +75,25 @@ footer {
 }
 
 .low-usage {
-  font-size: 7rem;
   margin-top: 20px;
   margin-bottom: 50px;
   color: green;
 }
 
 .high-usage {
-  font-size: 7rem;
   margin-top: 20px;
   margin-bottom: 50px;
   color: red;
 }
 
 .currentTemp {
-  font-size: 7rem;
+  font-size: 5rem;
   margin-top: 20px;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
+}
+.currentTemp p {
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .buttons {
