--- a/styles/style.scss
+++ b/styles/style.scss
@@ -14,6 +14,8 @@ h1, h2, h3 {
 }
 h1 {
   font-size: 4rem;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 button {
@@ -34,7 +36,13 @@ main {
   box-shadow: 0px 14px 28px darken($light, 20%), 0px 10px 10px darken($light, 10%);
   display: flex;
   flex-direction: column;
+
+  sup {
+    margin-left: -20px;
+  }
+
 }
+
 footer {
   margin: 25px auto;
   width: 400px;
@@ -49,14 +57,12 @@ footer {
   margin-bottom: 25px;
 }
 
-
 #interface {
   background-color: $light;
   border-radius: 10px;
-  width: 500px;
-  height: 700px;
+  width: 600px;
+  height: 600px;
   margin: auto;
-  padding: 50px;
   text-align: center;
   display: flex;
   flex-direction: column;
@@ -73,23 +79,26 @@ footer {
 }
 
 .low-usage {
-  font-size: 7rem;
   margin-top: 20px;
   margin-bottom: 50px;
   color: green;
 }
 
 .high-usage {
-  font-size: 7rem;
   margin-top: 20px;
   margin-bottom: 50px;
   color: red;
 }
 
 .currentTemp {
-  font-size: 7rem;
+  font-size: 5rem;
   margin-top: 20px;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
+
+  p {
+    margin-top: 10px;
+    margin-bottom:10px;
+  }
 }
 
 
