Created docs folder to hold imgs of interface and tests.

--- a/styles/style.scss
+++ b/styles/style.scss
@@ -74,8 +74,8 @@ footer {
 }
 
 .psmOn {
-  // background-color: #FF958B;
-  color: #FF564B;
+  background-color: #FF564B;
+  color: white;
 }
 
 .low-usage {
